--- a/index.html
+++ b/index.html
@@ -1,21 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>Hello World Embed</title>
-    <meta property="og:title" content="Hello World!" />
-    <meta property="og:image" content="https://i.imgur.com/EXAMPLE.jpg" />
-    <meta
-      property="og:description"
-      content="This is an example of a rich embed for Hello World!"
-    />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://bonesisuseful.github.io/Alt-Display/"
-    />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <p>Hello World!</p>
+    <div>bones was here</div>
+    <script src="works.js"></script>
   </body>
 </html>
