--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Inventory</title>
   </head>
   <body>
-    <div>bones was here</div>
-    <script src="works.js"></script>
+    <h1>Inventory</h1>
+    <p id="inventory"></p>
+    <script>
+      function getInventoryData() {
+        fetch("https://raw.githubusercontent.com/BonesIsUseful/Alt-Display/main/inventory.json")
+          .then((response) => response.json())
+          .then((data) => {
+            document.getElementById("inventory").textContent = JSON.stringify(data);
+          })
+          .catch((error) => {
+            console.error(error);
+          });
+      }
+
+      setInterval(getInventoryData, 60000);
+
+      getInventoryData();
+    </script>
   </body>
 </html>
